Removed old SciTech wrapper, fixed Results wrapping issue

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -80,9 +80,7 @@ border: 1px solid #a94442;
 }
 
 .search-result-row{
-	background-color:white;
-	padding:10px;
-	box-shadow:0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+	overflow: auto;
 }
 
 .rounded{
